--- a/public/students.html
+++ b/public/students.html
@@ -1,120 +1,314 @@
-﻿<!-- students.html build v2025-10-10-6 (adds renewal badges/colors) -->
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><title>Students</title>
-  <link rel="stylesheet" href="styles.css?v=2" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-</head><body>
-<h1>Students</h1>
-<p><a href="index.html">← Back to Main</a></p>
+﻿<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Students</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    body { font-family: sans-serif; max-width: 900px; margin: 2rem auto; }
+    h1, h2 { margin: .3rem 0; }
+    table { border-collapse: collapse; width: 100%; margin: .5rem 0; }
+    th, td { border: 1px solid #ccc; padding: 6px; text-align: left; vertical-align: middle; }
+    input, select, button { margin: 2px; }
+    .actions button { margin-right: .25rem; }
+    .hint { color:#555; font-size:.9em; }
+  </style>
+</head>
+<body>
+  <h1>Students</h1>
 
-<div id="err" class="error"></div>
+  <h2>Add Student</h2>
+  <form id="studentForm">
+    <input type="text" id="first_name" placeholder="First Name" required>
+    <input type="text" id="last_name" placeholder="Last Name" required>
+    <input type="text" id="phone" placeholder="Phone">
+    <input type="text" id="program" placeholder="Program">
+    <input type="date" id="start_date" placeholder="Start">
+    <input type="date" id="renewal_date" placeholder="Renewal">
+    <input type="email" id="email" placeholder="Email">
+    <input type="text" id="address" placeholder="Address">
+    <input type="number" id="age" placeholder="Age" min="0" style="width:6rem">
+    <!-- URL or local file -->
+    <input type="url" id="photo" placeholder="Photo URL (optional)">
+    <input type="file" id="photoFile" accept="image/*">
+    <div class="hint">You can paste a Photo URL or choose a file. If a file is chosen, it will be uploaded automatically.</div>
+    <button type="submit">Add</button>
+  </form>
 
-<div class="toolbar">
-  <label>Show:
-    <select id="filter"><option value="1" selected>Active</option><option value="0">Old (Archived)</option><option value="all">All</option></select>
-  </label>
-  <button id="refreshBtn">Refresh</button>
-  <button id="oldBtn" title="Quick view old students">Old Students</button>
-</div>
+  <h2>Student List</h2>
+  <table>
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Phone</th>
+        <th>Program</th>
+        <th>Start</th>
+        <th>Renewal</th>
+        <th class="actions">Actions</th>
+      </tr>
+    </thead>
+    <tbody id="studentsBody"></tbody>
+  </table>
 
-<h2>Add / Edit Student</h2>
-<form id="studentForm">
-  <input type="hidden" id="id" name="id" />
-  <div class="grid">
-    <input id="first_name" name="first_name" placeholder="First Name" required />
-    <input id="last_name"  name="last_name"  placeholder="Last Name"  required />
-    <input id="phone"      name="phone"      placeholder="Phone" />
-    <input id="email"      name="email"      placeholder="Email" />
-    <input id="address"    name="address"    placeholder="Address" />
-    <input id="age"        name="age"        type="number" placeholder="Age" />
-    <input id="program"    name="program"    placeholder="Program (e.g., BJJ)" />
-    <input id="start_date" name="start_date" type="date" />
-    <input id="renewal_date" name="renewal_date" type="date" />
-    <input id="parent_name" name="parent_name" placeholder="Parent (if underage)" />
-    <input id="notes"      name="notes"      placeholder="Notes" />
-    <button id="saveBtn" type="submit">Save</button>
-  </div>
-</form>
+  <p><a href="index.html">Back to Main Page</a></p>
 
-<h2>Student List</h2>
-<table id="studentsTable"><thead>
-  <tr><th>Name</th><th>Phone</th><th>Program</th><th>Start</th><th>Renewal</th><th>Status</th><th>Actions</th></tr>
-</thead><tbody></tbody></table>
+  <script>
+    const tbody = document.getElementById('studentsBody');
 
-<p class="muted">Marker: students.html build v2025-10-10-6</p>
+    function normalizePhotoUrl(url) {
+      if (!url) return '';
+      // Trim spaces
+      url = String(url).trim();
+      // If it looks like a Windows fake path from file inputs, ignore (we upload files separately)
+      if (/^C:\\\\fakepath\\\\/i.test(url)) return '';
+      // If it is relative without leading slash, make it absolute from site root
+      if (!/^https?:\/\//i.test(url) && !url.startsWith('/')) {
+        return '/' + url.replace(/^\/+/, '');
+      }
+      return url;
+    }
 
-<script>
-const $=s=>document.querySelector(s), $$=s=>Array.from(document.querySelectorAll(s));
-const err=$('#err');
-function showError(m){err.textContent=m||''; err.style.display=m?'block':'none';}
-function todayISO(){return new Date().toISOString().slice(0,10)}
-function plusDaysISO(iso,days){const d=new Date(iso||todayISO()); d.setDate(d.getDate()+days); return d.toISOString().slice(0,10)}
-// Defaults
-$('#start_date').value=todayISO(); $('#renewal_date').value=plusDaysISO($('#start_date').value,28);
-$('#start_date').addEventListener('change',()=>{$('#renewal_date').value=plusDaysISO($('#start_date').value,28)})
+    function imgSmall(url) {
+      const src = normalizePhotoUrl(url);
+      if (!src) return '';
+      // Add onerror to hide broken images
+      return `<img src="${src}" alt="" onerror="this.style.display='none'" style="width:32px;height:32px;object-fit:cover;vertical-align:middle;margin-right:6px;border-radius:4px;">`;
+    }
 
-function daysBetween(a,b){return Math.floor((new Date(a)-new Date(b))/(1000*60*60*24))}
-function renewalBadge(renewalISO){
-  if(!renewalISO) return {html:'', row:''};
-  const d = daysBetween(renewalISO, todayISO()); // + = days until renewal in the future? careful:
-  const delta = Math.floor((new Date(renewalISO)-new Date(todayISO()))/(1000*60*60*24));
-  if (delta < 0) return { html:`<span class="badge danger">Overdue ${-delta}d</span>`, row:'overdue' };
-  if (delta <= 7) return { html:`<span class="badge warn">Due in ${delta}d</span>`, row:'due-soon' };
-  return { html:`<span class="badge ok">In ${delta}d</span>`, row:'' };
-}
+    // Prefill dates: start = today, renewal = +28 days
+    (function prefillDates() {
+      const sd = document.getElementById('start_date');
+      const rd = document.getElementById('renewal_date');
+      const today = new Date();
+      const y = today.getFullYear();
+      const m = String(today.getMonth() + 1).padStart(2, '0');
+      const d = String(today.getDate()).padStart(2, '0');
+      const startStr = `${y}-${m}-${d}`;
+      const renew = new Date(today);
+      renew.setDate(renew.getDate() + 28);
+      const ry = renew.getFullYear();
+      const rm = String(renew.getMonth() + 1).padStart(2, '0');
+      const rdStr = String(renew.getDate()).padStart(2, '0');
+      const renewStr = `${ry}-${rm}-${rdStr}`;
+      sd.value = startStr;
+      rd.value = renewStr;
+    })();
 
-async function api(url,opts={}){ try{ const r=await fetch(url,opts); if(!r.ok) throw new Error((await r.text())||r.statusText); const ct=r.headers.get('content-type')||''; return ct.includes('application/json')?r.json():r.text(); }catch(e){showError(e.message); throw e;} }
+    async function loadStudents() {
+      const res = await fetch('/api/students');
+      const list = await res.json();
+      tbody.innerHTML = '';
 
-async function fetchStudents(){
-  showError('');
-  const filter=$('#filter').value;
-  const data=await api('/api/students?active='+encodeURIComponent(filter));
-  const tbody=$('#studentsTable tbody'); tbody.innerHTML='';
-  for(const s of data){
-    const {html:renewBadge,row:rowCls}=renewalBadge(s.renewal_date);
-    const tr=document.createElement('tr');
-    if(rowCls) tr.classList.add(rowCls);
-    tr.innerHTML=`
-      <td>${(s.first_name||'')+' '+(s.last_name||'')}</td>
-      <td>${s.phone||''}</td>
-      <td>${s.program||''}</td>
-      <td>${s.start_date||''}</td>
-      <td>${s.renewal_date||''} ${renewBadge}</td>
-      <td>${s.active?'Active':'Old'}</td>
-      <td>
-        <button class="edit" data-id="${s.id}">Edit</button>
-        <button class="del" data-id="${s.id}">Delete</button>
-        ${s.active?`<button class="arch" data-id="${s.id}" data-active="0">Archive</button>`:`<button class="arch" data-id="${s.id}" data-active="1">Unarchive</button>`}
-      </td>`;
-    tbody.appendChild(tr);
-  }
-  $$('#studentsTable .edit').forEach(b=>b.onclick=()=>fillForm(b.dataset.id));
-  $$('#studentsTable .del').forEach(b=>b.onclick=()=>delStudent(b.dataset.id));
-  $$('#studentsTable .arch').forEach(b=>b.onclick=()=>toggleArchive(b.dataset.id,b.dataset.active));
-}
+      list.forEach(s => {
+        const tr = document.createElement('tr');
+        tr.innerHTML = `
+          <td>${imgSmall(s.photo)}${s.first_name} ${s.last_name}</td>
+          <td>${s.phone || ''}</td>
+          <td>${s.program || ''}</td>
+          <td>${s.start_date || ''}</td>
+          <td>${s.renewal_date || ''}</td>
+          <td class="actions">
+            <button class="edit-btn" data-id="${s.id}">Edit</button>
+            <button class="delete-btn" data-id="${s.id}">Delete</button>
+            <button class="view-payments-btn" data-id="${s.id}">View Payments</button>
+          </td>
+        `;
+        tbody.appendChild(tr);
 
-async function fillForm(id){
-  showError('');
-  const list=await api('/api/students?active=all');
-  const s=list.find(x=>x.id==id); if(!s) return;
-  for(const k of ['id','first_name','last_name','phone','email','address','age','program','start_date','renewal_date','parent_name','notes']){
-    const el=document.getElementById(k); if(el) el.value=s[k]??'';
-  }
-  $('#saveBtn').textContent='Update'; window.scrollTo({top:0,behavior:'smooth'});
-}
-async function delStudent(id){ if(!confirm('Delete this student?')) return; await api('/api/students/'+id,{method:'DELETE'}); fetchStudents(); }
-async function toggleArchive(id,toActive){ await api('/api/students/'+id+'/archive?active='+toActive,{method:'PATCH'}); fetchStudents(); }
+        // Hidden details row for payments-by-month
+        const detailsTr = document.createElement('tr');
+        detailsTr.className = 'student-payments-row';
+        detailsTr.style.display = 'none';
+        const currentYear = new Date().getFullYear();
+        detailsTr.innerHTML = `
+          <td colspan="6">
+            <div>
+              <label>Year:
+                <input type="number" class="year-input" value="${currentYear}" min="2000" max="2100" style="width: 6rem;">
+              </label>
+              <button class="load-student-payments" data-id="${s.id}">Load</button>
+            </div>
+            <div class="payments-result" id="payments-${s.id}" style="margin-top:.5rem;"></div>
+          </td>
+        `;
+        tbody.appendChild(detailsTr);
+      });
+    }
 
-$('#studentForm').addEventListener('submit',async(e)=>{
-  e.preventDefault(); showError('');
-  const payload=Object.fromEntries(new FormData(e.target).entries());
-  if(!payload.first_name && !payload.last_name){ showError('Please enter at least a first or last name.'); return; }
-  payload.age=payload.age?Number(payload.age):null;
-  const isUpdate=!!payload.id; const url=isUpdate?('/api/students/'+payload.id):'/api/students'; const method=isUpdate?'PUT':'POST';
-  await api(url,{method,headers:{'Content-Type':'application/json'},body:JSON.stringify(payload)});
-  e.target.reset(); $('#saveBtn').textContent='Save'; $('#start_date').value=todayISO(); $('#renewal_date').value=plusDaysISO($('#start_date').value,28);
-  fetchStudents();
-});
-$('#filter').onchange=fetchStudents; $('#refreshBtn').onclick=fetchStudents; $('#oldBtn').onclick=()=>{ $('#filter').value='0'; fetchStudents(); };
-fetchStudents();
-</script>
-</body></html>
+    // Upload file helper: returns URL string
+    async function uploadPhotoFile(file) {
+      const fd = new FormData();
+      fd.append('image', file);
+      const resp = await fetch('/api/uploads/image', {
+        method: 'POST',
+        body: fd
+      });
+      if (!resp.ok) {
+        const msg = await resp.text();
+        throw new Error(msg || 'Upload failed');
+      }
+      const data = await resp.json();
+      return data.url; // e.g. /uploads/12345_name.png
+    }
+
+    // Add student
+    document.getElementById('studentForm').addEventListener('submit', async (e) => {
+      e.preventDefault();
+
+      let photoUrl = (document.getElementById('photo').value || '').trim();
+      const fileEl = document.getElementById('photoFile');
+      const file = fileEl.files && fileEl.files[0];
+
+      try {
+        // If a local file is chosen, upload it first, then use returned URL
+        if (file) {
+          const uploaded = await uploadPhotoFile(file);
+          photoUrl = uploaded; // relative path served from /public/uploads
+        }
+
+        // If dates are empty for any reason, ensure defaults here too
+        const sdEl = document.getElementById('start_date');
+        const rdEl = document.getElementById('renewal_date');
+        if (!sdEl.value) {
+          const today = new Date();
+          sdEl.value = today.toISOString().slice(0,10);
+        }
+        if (!rdEl.value) {
+          const base = new Date(sdEl.value);
+          base.setDate(base.getDate() + 28);
+          rdEl.value = base.toISOString().slice(0,10);
+        }
+
+        const payload = {
+          first_name: document.getElementById('first_name').value.trim(),
+          last_name: document.getElementById('last_name').value.trim(),
+          phone: document.getElementById('phone').value.trim() || null,
+          program: document.getElementById('program').value.trim() || null,
+          start_date: sdEl.value || null,
+          renewal_date: rdEl.value || null,
+          email: document.getElementById('email').value.trim() || null,
+          address: document.getElementById('address').value.trim() || null,
+          age: document.getElementById('age').value || null,
+          photo: normalizePhotoUrl(photoUrl) || null
+        };
+
+        const r = await fetch('/api/students', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify(payload)
+        });
+        if (!r.ok) {
+          const t = await r.text();
+          throw new Error(t || 'Error adding student');
+        }
+
+        e.target.reset();
+        // Refill dates after reset
+        (function rePrefill() {
+          const sd = document.getElementById('start_date');
+          const rd = document.getElementById('renewal_date');
+          const today = new Date();
+          const y = today.getFullYear();
+          const m = String(today.getMonth() + 1).padStart(2, '0');
+          const d = String(today.getDate()).padStart(2, '0');
+          const startStr = `${y}-${m}-${d}`;
+          const renew = new Date(today);
+          renew.setDate(renew.getDate() + 28);
+          const ry = renew.getFullYear();
+          const rm = String(renew.getMonth() + 1).padStart(2, '0');
+          const rdStr = String(renew.getDate()).padStart(2, '0');
+          const renewStr = `${ry}-${rm}-${rdStr}`;
+          sd.value = startStr;
+          rd.value = renewStr;
+        })();
+
+        loadStudents();
+      } catch (err) {
+        alert('Error: ' + err.message);
+      }
+    });
+
+    // Delegated actions (edit/delete/toggle payments/load payments)
+    document.addEventListener('click', async (e) => {
+      if (e.target.matches('.view-payments-btn')) {
+        const row = e.target.closest('tr');
+        const detailsRow = row.nextElementSibling;
+        detailsRow.style.display = detailsRow.style.display === 'none' ? '' : 'none';
+        return;
+      }
+
+      if (e.target.matches('.load-student-payments')) {
+        const id = e.target.getAttribute('data-id');
+        const detailsRow = e.target.closest('tr');
+        const yearInput = detailsRow.querySelector('.year-input');
+        const box = detailsRow.querySelector(`#payments-${id}`);
+        const year = (yearInput && yearInput.value) ? yearInput.value : '';
+
+        box.textContent = 'Loading...';
+        const url = year
+          ? `/api/payments/by-student/${id}/monthly?year=${encodeURIComponent(year)}`
+          : `/api/payments/by-student/${id}/monthly`;
+        const r = await fetch(url);
+        const data = await r.json();
+
+        const monthNames = ['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec'];
+        const map = new Map();
+        (data.rows || []).forEach(row => {
+          const key = `${row.y}-${row.m}`;
+          map.set(key, Number(row.total || 0));
+        });
+
+        const y = year || String(new Date().getFullYear());
+        let html = `<table><tr>${monthNames.map(m => `<th>${m}</th>`).join('')}</tr><tr>`;
+        for (let i = 1; i <= 12; i++) {
+          const mm = String(i).padStart(2, '0');
+          const key = `${y}-${mm}`;
+          const amt = (map.get(key) || 0).toFixed(2);
+          html += `<td>$${amt}</td>`;
+        }
+        html += `</tr></table>`;
+        box.innerHTML = html;
+        return;
+      }
+
+      if (e.target.matches('.delete-btn')) {
+        const id = e.target.getAttribute('data-id');
+        if (!confirm('Delete this student?')) return;
+        const r = await fetch(`/api/students/${id}`, { method: 'DELETE' });
+        if (r.ok) loadStudents(); else alert('Error deleting');
+        return;
+      }
+
+      if (e.target.matches('.edit-btn')) {
+        const id = e.target.getAttribute('data-id');
+        const res = await fetch(`/api/students/${id}`);
+        const s = await res.json();
+        const first_name = prompt('First Name:', s.first_name); if (first_name === null) return;
+        const last_name  = prompt('Last Name:',  s.last_name);  if (last_name === null) return;
+        const phone      = prompt('Phone:',      s.phone || '');
+        const program    = prompt('Program:',    s.program || '');
+        const start_date = prompt('Start (YYYY-MM-DD):', s.start_date || '');
+        const renewal_date = prompt('Renewal (YYYY-MM-DD):', s.renewal_date || '');
+        const email      = prompt('Email:',      s.email || '');
+        const address    = prompt('Address:',    s.address || '');
+        const age        = prompt('Age:',        s.age ?? '');
+        const photo      = prompt('Photo URL (or /uploads/..):',  s.photo || '');
+
+        const payload = {
+          first_name, last_name, phone, program, start_date, renewal_date,
+          email, address, age, photo: normalizePhotoUrl(photo)
+        };
+        const up = await fetch(`/api/students/${id}`, {
+          method: 'PUT',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify(payload)
+        });
+        if (up.ok) loadStudents(); else alert('Error updating');
+        return;
+      }
+    });
+
+    loadStudents();
+  </script>
+</body>
+</html>
