--- a/public/attendance.html
+++ b/public/attendance.html
@@ -1,21 +1,160 @@
-﻿<!-- attendance.html build v2025-10-10-2 -->
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><title>Attendance</title>
-  <link rel="stylesheet" href="styles.css?v=1" /><meta name="viewport" content="width=device-width, initial-scale=1" />
+﻿<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Attendance</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    body { font-family: sans-serif; max-width: 720px; margin: 2rem auto; }
+    table { border-collapse: collapse; width: 100%; }
+    th, td { border: 1px solid #ccc; padding: 6px; text-align: left; }
+    input, button, select { margin: 2px; }
+    .row { margin: .35rem 0; }
+  </style>
+</head>
+<body>
+  <h1>Attendance</h1>
 
-</head><body>
-<h1>Attendance</h1><p><a href="index.html">← Back to Main</a></p>
-<h2>Mark Attendance</h2>
-<div class="row"><select id="studentSelect"></select><input id="date" type="date" /><label><input id="present" type="checkbox" checked /> Present</label><button id="markBtn">Mark</button></div>
-<h2>Records</h2>
-<table id="attTable"><thead><tr><th>Date</th><th>Student</th><th>Status</th><th>Actions</th></tr></thead><tbody></tbody></table>
-<p>Marker: attendance.html build v2025-10-10-2</p>
-<script>
-const $=s=>document.querySelector(s), $$=s=>Array.from(document.querySelectorAll(s));
-document.getElementById('date').value=new Date().toISOString().slice(0,10);
-async function loadStudents(){const d=await (await fetch('/api/students?active=1')).json(); $('#studentSelect').innerHTML=d.map(s=>`<option value="${s.id}">${s.first_name||''} ${s.last_name||''}</option>`).join('')}
-async function loadAttendance(){const arr=await (await fetch('/api/attendance')).json(); const tbody=$('#attTable tbody'); tbody.innerHTML=''; for(const a of arr){const tr=document.createElement('tr'); tr.innerHTML=`<td>${a.date||''}</td><td>${(a.first_name||'')+' '+(a.last_name||'')}</td><td>${a.present?'Present':'Absent'}</td><td><button data-id="${a.id}" class="del">Delete</button></td>`; tbody.appendChild(tr)} $$('#attTable .del').forEach(b=>b.onclick=async()=>{await fetch('/api/attendance/'+b.dataset.id,{method:'DELETE'}); loadAttendance();})}
-$('#markBtn').onclick=async()=>{const p={student_id:$('#studentSelect').value,date:$('#date').value,present:$('#present').checked}; await fetch('/api/attendance',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify(p)}); loadAttendance();}
-loadStudents(); loadAttendance();
-</script>
-</body></html>
+  <h2>Add Attendance</h2>
+  <div class="row">
+    <label>Student:
+      <select id="addStudentName" style="min-width:14rem">
+        <option value="">(Select student)</option>
+      </select>
+    </label>
+    <label>Date: <input type="date" id="att_date"></label>
+    <label>Present:
+      <select id="present">
+        <option value="1">Present</option>
+        <option value="0">Absent</option>
+      </select>
+    </label>
+    <button id="addBtn">Mark Attendance</button>
+  </div>
 
+  <h2>Records</h2>
+  <div class="row">
+    <label>Filter by Name:
+      <select id="filterStudentName" style="min-width:14rem">
+        <option value="">All students</option>
+      </select>
+    </label>
+    <button id="filterBtn">Apply</button>
+    <button id="clearFilterBtn">Clear</button>
+  </div>
+
+  <table>
+    <thead>
+      <tr><th>ID</th><th>Name</th><th>Date</th><th>Present</th><th>Actions</th></tr>
+    </thead>
+    <tbody id="attBody"></tbody>
+  </table>
+
+  <p><a href="index.html">Back to Main Page</a></p>
+
+  <script>
+    let students = [];
+    const idToName = new Map();
+
+    async function loadStudents() {
+      const res = await fetch('/api/students');
+      students = await res.json();
+      students.sort((a,b) =>
+        (a.last_name||'').localeCompare(b.last_name||'') ||
+        (a.first_name||'').localeCompare(b.first_name||'')
+      );
+
+      const addSel = document.getElementById('addStudentName');
+      const filterSel = document.getElementById('filterStudentName');
+      addSel.innerHTML = '<option value="">(Select student)</option>';
+      filterSel.innerHTML = '<option value="">All students</option>';
+      idToName.clear();
+
+      students.forEach(s => {
+        const full = (s.first_name||'') + ' ' + (s.last_name||'');
+        idToName.set(s.id, full);
+
+        const opt1 = document.createElement('option');
+        opt1.value = String(s.id);
+        opt1.textContent = full;
+        addSel.appendChild(opt1);
+
+        const opt2 = document.createElement('option');
+        opt2.value = String(s.id);
+        opt2.textContent = full;
+        filterSel.appendChild(opt2);
+      });
+    }
+
+    async function loadAttendance(studentId) {
+      const qs = studentId ? ('?student_id=' + encodeURIComponent(studentId)) : '';
+      const res = await fetch('/api/attendance' + qs);
+      const list = await res.json();
+      const tbody = document.getElementById('attBody');
+      tbody.innerHTML = '';
+      (list || []).forEach(r => {
+        const tr = document.createElement('tr');
+        const name = r.student_id ? (idToName.get(r.student_id) || ('ID ' + r.student_id)) : '';
+        tr.innerHTML = `
+          <td>${r.id}</td>
+          <td>${name}</td>
+          <td>${r.date}</td>
+          <td>${Number(r.present) ? 'Present' : 'Absent'}</td>
+          <td><button class="del" data-id="${r.id}">Delete</button></td>
+        `;
+        tbody.appendChild(tr);
+      });
+    }
+
+    document.getElementById('addBtn').addEventListener('click', async () => {
+      const student_id = document.getElementById('addStudentName').value || '';
+      const date = document.getElementById('att_date').value;
+      const present = document.getElementById('present').value === '1';
+      if (!student_id || !date) { alert('Please select a student and date'); return; }
+
+      const r = await fetch('/api/attendance', {
+        method: 'POST',
+        headers: { 'Content-Type':'application/json' },
+        body: JSON.stringify({ student_id, date, present })
+      });
+      if (r.ok) {
+        const filterVal = document.getElementById('filterStudentName').value || '';
+        await loadAttendance(filterVal || null);
+      } else {
+        alert('Error adding attendance');
+      }
+    });
+
+    document.addEventListener('click', async (e) => {
+      if (e.target.matches('.del')) {
+        const id = e.target.getAttribute('data-id');
+        const r = await fetch('/api/attendance/' + id, { method:'DELETE' });
+        if (r.ok) {
+          const filterVal = document.getElementById('filterStudentName').value || '';
+          await loadAttendance(filterVal || null);
+        } else {
+          alert('Error deleting');
+        }
+      }
+    });
+
+    document.getElementById('filterBtn').addEventListener('click', () => {
+      const val = document.getElementById('filterStudentName').value || '';
+      loadAttendance(val || null);
+    });
+    document.getElementById('clearFilterBtn').addEventListener('click', () => {
+      document.getElementById('filterStudentName').value = '';
+      loadAttendance(null);
+    });
+
+    (async function init() {
+      // Prefill date to today for convenience
+      const today = new Date();
+      document.getElementById('att_date').value = today.toISOString().slice(0,10);
+
+      await loadStudents();     // build dropdowns + map
+      await loadAttendance(null);
+    })();
+  </script>
+</body>
+</html>
